# mea-analyzer

./: .gitignore  CITATION.cff  LICENSE  QuickStart.md  README.md  environment.yaml  pyproject.toml  requirements.txt
config/: Plate_VPA.yaml  metrics_config.yaml
docs/: quickstart.md
notebooks/: mea_analyzer_v1.ipynb
notebooks/.ipynb_checkpoints/: 01_load_and_inspect_axion_neuralmetrics_csv-checkpoint.ipynb
src/: config_handler.py  data_loader.py  data_organizer.py
src/analysis/: normalization.py  timepoints_tests.py
src/io/: table_export.py
src/mea_statistics/: timepoint_tests.py
src/qc/: outliers.py
src/utilities/: create_experiment_config.py
src/visualization/: plot_plate_layout.py  timecourse.py
